resolved intersectionObserver bugs and made small adjustments to the ui on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -94,3 +94,9 @@
 .contact-information__title {
     margin-bottom: 1.5rem;
 }
+
+@media only screen and (max-width: 490px){
+    .contact-container {
+        position: static;
+    }
+}
