--- a/css/main.css
+++ b/css/main.css
@@ -187,10 +187,16 @@ p {
 }
 
 
+
+
+
+
+
 .about-us {
     display: flex;
     justify-content: center;
     padding: 19rem 3rem;
+    opacity: 0;
 }
 
 .about-us__description {
@@ -217,6 +223,7 @@ p {
     width: 600px;
     height: fit-content;
 }
+
 
 
 
@@ -326,6 +333,8 @@ p {
 }
 
 
+
+
 .call-to-action {
     background-color: #2d30d8;
     color: white;
@@ -390,6 +399,7 @@ p {
     align-items: center;
     flex-wrap: wrap;
     margin: 1rem;
+    opacity: 0;
 }
 
 .card {
@@ -566,6 +576,14 @@ p {
 
     .header {
         background-position: left;
+    }
+
+    .review__dots{
+        display: none;
+    }
+
+    .reviews {
+        height: 800px;
     }
 }
 
